TeacherList, Blog and BlogList

--- a/EduHomeBack/EduHomeBack/Views/About/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/About/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-@await Component.InvokeAsync("Banner", "AboutUs")
+@*@await Component.InvokeAsync("Banner", "AboutUs")*@
 
 @*About Start*@
 <div class="about-area pb-155">
@@ -30,7 +30,7 @@
 
 
 <!-- Teacher Start -->
-<div class="teacher-area pb-150">
+@*<div class="teacher-area pb-150">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -42,7 +42,7 @@
         </div>
         @await Component.InvokeAsync("Teacher", 4)
     </div>
-</div>
+</div>*@
 <!-- Teacher End -->
 
 
