--- a/EduHomeBack/EduHomeBack/Views/Blog/Detail.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Blog/Detail.cshtml
@@ -1,47 +1,24 @@
 ﻿
 @{
     ViewData["Title"] = "Detail";
-    Event eventDetail = Model;
+    Blog blog = Model;
 }
 
-@await Component.InvokeAsync("Banner", "EventDetails")
+@await Component.InvokeAsync("Banner", "BlogDetails")
 
-<!-- Event Details Start -->
-<div class="event-details-area blog-area pt-150 pb-140">
+<!-- Blog Start -->
+<div class="blog-details-area pt-150 pb-140">
     <div class="container">
         <div class="row">
             <div class="col-md-8">
-                <div class="event-details">
-                    <div class="event-details-img">
-                        <img src="~/img/event/@eventDetail.Image" alt="event-details">
-                        <div class="event-date">
-                            <h3>@eventDetail.TimeStart.ToString("dd") <span>@eventDetail.TimeStart.ToString("MMM")</span></h3>
-                        </div>
+                <div class="blog-details">
+                    <div class="blog-details-img">
+                        <img src="~/img/blog/@blog.BlogList.Image" alt="blog-details" style="width: 100%">
                     </div>
-                    <div class="event-details-content">
-                        <h2>@eventDetail.Name</h2>
-                        <ul>
-                            <li><span>time:</span> @eventDetail.TimeStart.ToString("h:mm tt") - @eventDetail.TimeEnd.ToString("h:mm tt")</li>
-                            <li><span>venue : </span>@eventDetail.VenuePlace @eventDetail.VenueCity</li>
-                        </ul>
-                        @Html.Raw(eventDetail.Description)
-
-                        <div class="speakers-area fix">
-                            <h4>speakers</h4>
-                            @foreach (var speaker in eventDetail.EventSpeakers)
-                            {
-                                <div class="single-speaker">
-                                    <div class="speaker-img" style="height: 80px; width: 90px">
-                                        <img src="~/img/event/@speaker.Speaker.Image" alt="speaker" >
-                                    </div>
-                                    <div class="speaker-name">
-                                        <h5>@speaker.Speaker.Fullname</h5>
-                                        <p>@speaker.Speaker.Position, @speaker.Speaker.Company </p>
-                                    </div>
-                                </div>
-                            }
-
-                        </div>
+                    <div class="blog-details-content">
+                        <h2>@blog.Title </h2>
+                        <h6>By @blog.Author  /  @blog.PublishDate.ToString("MMMM dd, yyyy")  /  <i class="fa fa-comments-o"></i> @blog.Comment</h6>
+                        @Html.Raw(blog.Desciption)
                     </div>
                     <div class="reply-area">
                         <h3>LEAVE A REPLY</h3>
@@ -71,7 +48,7 @@
             </div>
             <div class="col-md-4">
                 <div class="blog-sidebar right">
-                    @*<div class="single-blog-widget mb-50">
+                    @*<div class="single-blog-widget mb-47">
                             <h3>search</h3>
                             <div class="blog-search">
                                 <form id="search" action="#">
@@ -82,7 +59,7 @@
                                 </form>
                             </div>
                         </div>*@
-                    <div class="single-blog-widget mb-50">
+                    <div class="single-blog-widget mb-47">
                         <h3>categories</h3>
                         <ul>
                             <li><a href="#">CSS Engineering (10)</a></li>
@@ -93,18 +70,18 @@
                             <li><a href="#">PHP (23)</a></li>
                         </ul>
                     </div>
-                    <div class="single-blog-widget mb-50">
+                    <div class="single-blog-widget mb-47">
                         <div class="single-blog-banner">
-                            <a href="blog-details.html" id="blog"><img src="~/img/blog/blog-img.jpg" alt="blog"></a>
+                            <a href="blog-details.html" id="blog"><img src="img/blog/blog-img.jpg" alt="blog"></a>
                             <h2>best<br> eductaion<br> theme</h2>
                         </div>
                     </div>
-                    <div class="single-blog-widget mb-50">
+                    <div class="single-blog-widget mb-47">
                         <h3>latest post</h3>
                         <div class="single-post mb-30">
                             <div class="single-post-img">
                                 <a href="blog-details.html">
-                                    <img src="~/img/post/post1.jpg" alt="post">
+                                    <img src="img/post/post1.jpg" alt="post">
                                     <div class="blog-hover">
                                         <i class="fa fa-link"></i>
                                     </div>
@@ -118,7 +95,7 @@
                         <div class="single-post mb-30">
                             <div class="single-post-img">
                                 <a href="blog-details.html">
-                                    <img src="~/img/post/post2.jpg" alt="post">
+                                    <img src="img/post/post2.jpg" alt="post">
                                     <div class="blog-hover">
                                         <i class="fa fa-link"></i>
                                     </div>
@@ -132,7 +109,7 @@
                         <div class="single-post">
                             <div class="single-post-img">
                                 <a href="blog-details.html">
-                                    <img src="~/img/post/post3.jpg" alt="post">
+                                    <img src="img/post/post3.jpg" alt="post">
                                     <div class="blog-hover">
                                         <i class="fa fa-link"></i>
                                     </div>
@@ -144,20 +121,20 @@
                             </div>
                         </div>
                     </div>
-                    @*<div class="single-blog-widget">
-                            <h3>tags</h3>
-                            <div class="single-tag">
-                                <a href="blog-details.html" class="mr-10 mb-10">course</a>
-                                <a href="blog-details.html" class="mr-10 mb-10">education</a>
-                                <a href="blog-details.html" class="mb-10">teachers</a>
-                                <a href="blog-details.html" class="mr-10">learning</a>
-                                <a href="blog-details.html" class="mr-10">university</a>
-                                <a href="blog-details.html">events</a>
-                            </div>
-                        </div>*@
+                    <div class="single-blog-widget">
+                        <h3>tags</h3>
+                        <div class="single-tag">
+                            <a href="blog-details.html" class="mr-10 mb-10">course</a>
+                            <a href="blog-details.html" class="mr-10 mb-10">education</a>
+                            <a href="blog-details.html" class="mb-10">teachers</a>
+                            <a href="blog-details.html" class="mr-10">learning</a>
+                            <a href="blog-details.html" class="mr-10">university</a>
+                            <a href="blog-details.html">events</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!-- Event Details End -->
+<!-- Blog End -->
