--- a/EduHomeBack/EduHomeBack/Views/Event/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Event/Index.cshtml
@@ -35,7 +35,7 @@
                                 </div>
                             </a>
                             <div class="event-date">
-                                <h3>@item.TimeStart.ToString("dd MMM")</h3>
+                                <h3>@item.TimeStart.ToString("dd")<span>@item.TimeStart.ToString("MMM")</span></h3>
                             </div>
                         </div>
                         <div class="event-content text-left">
