--- a/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
@@ -101,7 +101,7 @@
                                             </ul>*@
                                         </li>
                                         <li>
-                                            <a href="blog.html">blog</a>
+                                            <a asp-controller="Blog" asp-action="Index">blog</a>
                                             @*<ul>
                                                 <li><a href="blog.html">blog</a></li>
                                                 <li><a href="blog-left-side-bar.html">blog left sidebar</a></li>
