--- a/EduHomeBack/EduHomeBack/Views/Shared/Components/Teacher/Default.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Shared/Components/Teacher/Default.cshtml
@@ -1,25 +1,26 @@
 ﻿
 @{
-    List<Teacher> teachers = Model;
+    List<TeacherList> teacherList = Model;
 }
 
         <div class="row">
-            @foreach (var item in teachers)
+            @foreach (var item in teacherList)
             {
                 <div class="col-md-3 col-sm-4 col-xs-12">
                     <div class="single-teacher">
                         <div class="single-teacher-img">
-                            <a href="teacher-details.html"><img src="img/teacher/@item.Image" alt="teacher"></a>
+                            <a asp-action="Detail"><img src="img/teacher/@item.Image" alt="teacher"></a>
                         </div>
                         <div class="single-teacher-content text-center">
-                            <h2><a href="teacher-details.html">@item.Name</a></h2>
+                            <h2><a asp-action="Detail">@item.Fullname</a></h2>
 
                             <h4>@item.TeacherPositions?.FirstOrDefault()?.Position.Name</h4>
+
 
                             <ul>
                                     @foreach (var teacherSocialNetwork in item.SocialNetworks)
                                     {
-                                        <li><a href="@teacherSocialNetwork.Link"><i class="zmdi zmdi-@teacherSocialNetwork.Icon"></i></a></li>
+                                        <li><a href="@teacherSocialNetwork.Link">@Html.Raw(teacherSocialNetwork.Icon)</a></li>
                                     }
                             </ul>
 
