--- a/EduHomeBack/EduHomeBack/Views/Event/Detail.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Event/Detail.cshtml
@@ -1,7 +1,6 @@
-﻿
+﻿@model EventViewModel
 @{
     ViewData["Title"] = "Detail";
-    Event eventDetail = Model;
 }
 
 @await Component.InvokeAsync("Banner", "EventDetails")
@@ -13,26 +12,26 @@
             <div class="col-md-8">
                 <div class="event-details">
                     <div class="event-details-img">
-                        <img src="~/img/event/@eventDetail.Image" alt="event-details">
+                        <img src="~/img/event/@Model.Event.Image" alt="event-details">
                         <div class="event-date">
-                            <h3>@eventDetail.TimeStart.ToString("dd") <span>@eventDetail.TimeStart.ToString("MMM")</span></h3>
+                            <h3>@Model.Event.TimeStart.ToString("dd") <span>@Model.Event.TimeStart.ToString("MMM")</span></h3>
                         </div>
                     </div>
                     <div class="event-details-content">
-                        <h2>@eventDetail.Name</h2>
+                        <h2>@Model.Event.Name</h2>
                         <ul>
-                            <li><span>time:</span> @eventDetail.TimeStart.ToString("h:mm tt") - @eventDetail.TimeEnd.ToString("h:mm tt")</li>
-                            <li><span>venue : </span>@eventDetail.VenuePlace @eventDetail.VenueCity</li>
+                            <li><span>time:</span> @Model.Event.TimeStart.ToString("h:mm tt") - @Model.Event.TimeEnd.ToString("h:mm tt")</li>
+                            <li><span>venue : </span>@Model.Event.VenuePlace @Model.Event.VenueCity</li>
                         </ul>
-                        @Html.Raw(eventDetail.Description)
+                        @Html.Raw(Model.Event.Description)
 
                         <div class="speakers-area fix">
                             <h4>speakers</h4>
-                            @foreach (var speaker in eventDetail.EventSpeakers)
+                            @foreach (var speaker in Model.Event.EventSpeakers)
                             {
                                 <div class="single-speaker">
                                     <div class="speaker-img" style="height: 80px; width: 90px">
-                                        <img src="~/img/event/@speaker.Speaker.Image" alt="speaker" >
+                                        <img src="~/img/event/@speaker.Speaker.Image" alt="speaker">
                                     </div>
                                     <div class="speaker-name">
                                         <h5>@speaker.Speaker.Fullname</h5>
@@ -101,48 +100,23 @@
                     </div>
                     <div class="single-blog-widget mb-50">
                         <h3>latest post</h3>
-                        <div class="single-post mb-30">
-                            <div class="single-post-img">
-                                <a href="blog-details.html">
-                                    <img src="~/img/post/post1.jpg" alt="post">
-                                    <div class="blog-hover">
-                                        <i class="fa fa-link"></i>
-                                    </div>
-                                </a>
+                        @foreach (var item in Model.BlogList)
+                        {
+                            <div class="single-post mb-30">
+                                <div class="single-post-img">
+                                    <a href="blog-details.html">
+                                        <img src="~/img/blog/@item.Image" style="width: 100px; height: 100px" alt="post">
+                                        <div class="blog-hover">
+                                            <i class="fa fa-link"></i>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="single-post-content">
+                                    <h4><a asp-controller="Blog" asp-action="Detail" asp-route-id="@item.Id">@item.Title</a></h4>
+                                    <p>By @item.Author  /  @item.PublishDate.ToString("MMMM dd, yyyy")</p>
+                                </div>
                             </div>
-                            <div class="single-post-content">
-                                <h4><a href="blog-details.html">English Language Course for you</a></h4>
-                                <p>By Alex  /  June 20, 2017</p>
-                            </div>
-                        </div>
-                        <div class="single-post mb-30">
-                            <div class="single-post-img">
-                                <a href="blog-details.html">
-                                    <img src="~/img/post/post2.jpg" alt="post">
-                                    <div class="blog-hover">
-                                        <i class="fa fa-link"></i>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="single-post-content">
-                                <h4><a href="blog-details.html">Advance Web Design and Develop</a></h4>
-                                <p>By Alex  /  June 20, 2017</p>
-                            </div>
-                        </div>
-                        <div class="single-post">
-                            <div class="single-post-img">
-                                <a href="blog-details.html">
-                                    <img src="~/img/post/post3.jpg" alt="post">
-                                    <div class="blog-hover">
-                                        <i class="fa fa-link"></i>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="single-post-content">
-                                <h4><a href="blog-details.html">English Language Course for you</a></h4>
-                                <p>By Alex  /  June 20, 2017</p>
-                            </div>
-                        </div>
+                        }
                     </div>
                     @*<div class="single-blog-widget">
                             <h3>tags</h3>
