--- a/EduHomeBack/EduHomeBack/Views/Event/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Event/Index.cshtml
@@ -17,7 +17,7 @@
                 <div class="course-form">
                     <form id="search" action="#">
                         <input type="search" placeholder="Search..." name="search" />
-                        <button type="submit">search</button>
+                        <button asp-action="Search" type="submit">search</button>
                     </form>
                 </div>
             </div>
