--- a/EduHomeBack/EduHomeBack/Views/Blog/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Blog/Index.cshtml
@@ -11,12 +11,12 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="course-title">
-                    <h3>search courses</h3>
+                    <h3>search blogs</h3>
                 </div>
                 <div class="course-form">
                     <form id="search" action="#">
                         <input type="search" placeholder="Search..." name="search" />
-                        <button type="submit">search</button>
+                        <button asp-action="Search" type="submit">search</button>
                     </form>
                 </div>
             </div>
@@ -27,7 +27,7 @@
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="single-blog mb-60">
                         <div class="blog-img">
-                            <a asp-action="Detail"><img src="~/img/blog/@item.Image" alt="blog"></a>
+                            <a asp-action="Detail" asp-route-id="@item.Id"><img src="~/img/blog/@item.Image" alt="blog"></a>
                             <div class="blog-hover">
                                 <i class="fa fa-link"></i>
                             </div>
@@ -37,8 +37,8 @@
                                 <p>By @item.Author  /  @item.PublishDate.ToString("MMMM dd, yyyy") /  <i class="fa fa-comments-o"></i> @item.Comment</p>
                             </div>
                             <div class="blog-bottom">
-                                <h2><a asp-action="Detail">@item.Title </a></h2>
-                                <a asp-action="Detail">read more</a>
+                                <h2><a asp-action="Detail" asp-route-id="@item.Id">@item.Title </a></h2>
+                                <a asp-action="Detail" asp-route-id="@item.Id">read more</a>
                             </div>
                         </div>
                     </div>
