--- a/EduHomeBack/EduHomeBack/Views/Course/Detail.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Course/Detail.cshtml
@@ -1,7 +1,6 @@
-﻿
+﻿@model CourseViewModel
 @{
-    ViewData["Title"] = "Detail";
-    Course course = Model;
+    ViewData["Title"] = "Course Detail";
 }
 
 @await Component.InvokeAsync("Banner", "CourseDetails")
@@ -13,37 +12,37 @@
             <div class="col-md-8">
                 <div class="courses-details">
                     <div class="courses-details-img">
-                        <img src="~/img/course/@course.CourseList.Image" alt="courses-details">
+                        <img src="~/img/course/@Model.Course.CourseList.Image" alt="courses-details">
                     </div>
                     <div class="course-details-content">
-                        <h2>@course.Name</h2>
-                        <p>@course.Description</p>
+                        <h2>@Model.Course.Name</h2>
+                        <p>@Model.Course.Description</p>
                         <div class="course-details-left">
                             <div class="single-course-left">
                                 <h3>about course</h3>
-                                <p>@course.AboutCourse</p>
+                                <p>@Model.Course.AboutCourse</p>
                             </div>
                             <div class="single-course-left">
                                 <h3>how to apply</h3>
-                                <p>@course.HowToApply</p>
+                                <p>@Model.Course.HowToApply</p>
                             </div>
                             <div class="single-course-left">
                                 <h3>certification</h3>
-                                @Html.Raw(course.Certification)
+                                @Html.Raw(Model.Course.Certification)
                             </div>
                         </div>
                         <div class="course-details-right">
                             <h3>COURSE FEATURES</h3>
                             <ul>
-                                <li>starts <span>@course.Starts.ToString("dd MMMM, yyyy")</span></li>
-                                <li>duration <span>@course.Duration</span></li>
-                                <li>class duration <span>@course.ClassDuration</span></li>
-                                <li>skill level <span>@course.SkillLevel</span></li>
-                                <li>language <span>@course.Language</span></li>
-                                <li>students <span>@course.Students</span></li>
-                                <li>assesments <span>@course.Assesments</span></li>
+                                <li>starts <span>@Model.Course.Starts.ToString("dd MMMM, yyyy")</span></li>
+                                <li>duration <span>@Model.Course.Duration</span></li>
+                                <li>class duration <span>@Model.Course.ClassDuration</span></li>
+                                <li>skill level <span>@Model.Course.SkillLevel</span></li>
+                                <li>language <span>@Model.Course.Language</span></li>
+                                <li>students <span>@Model.Course.Students</span></li>
+                                <li>assesments <span>@Model.Course.Assesments</span></li>
                             </ul>
-                            <h3 class="red">course fee $@course.CourseFee</h3>
+                            <h3 class="red">course fee $@Model.Course.CourseFee</h3>
                         </div>
                     </div>
                     <div class="reply-area">
@@ -75,16 +74,16 @@
             <div class="col-md-4">
                 <div class="blog-sidebar right">
                     @*<div class="single-blog-widget mb-50">
-                        <h3>search</h3>
-                        <div class="blog-search">
-                            <form id="search" action="#">
-                                <input type="search" placeholder="Search..." name="search" />
-                                <button type="submit">
-                                    <span><i class="fa fa-search"></i></span>
-                                </button>
-                            </form>
-                        </div>
-                    </div>*@
+                            <h3>search</h3>
+                            <div class="blog-search">
+                                <form id="search" action="#">
+                                    <input type="search" placeholder="Search..." name="search" />
+                                    <button type="submit">
+                                        <span><i class="fa fa-search"></i></span>
+                                    </button>
+                                </form>
+                            </div>
+                        </div>*@
                     <div class="single-blog-widget mb-50">
                         <h3>categories</h3>
                         <ul>
@@ -104,63 +103,38 @@
                     </div>
                     <div class="single-blog-widget mb-50">
                         <h3>latest post</h3>
-                        <div class="single-post mb-30">
-                            <div class="single-post-img">
-                                <a href="blog-details.html">
-                                    <img src="~/img/post/post1.jpg" alt="post">
-                                    <div class="blog-hover">
-                                        <i class="fa fa-link"></i>
-                                    </div>
-                                </a>
+                        @foreach (var item in Model.BlogList)
+                        {
+                            <div class="single-post mb-30">
+                                <div class="single-post-img">
+                                    <a href="blog-details.html">
+                                        <img src="~/img/blog/@item.Image" style="width: 100px; height: 100px" alt="post">
+                                        <div class="blog-hover">
+                                            <i class="fa fa-link"></i>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="single-post-content">
+                                    <h4><a asp-controller="Blog" asp-action="Detail" asp-route-id="@item.Id">@item.Title</a></h4>
+                                    <p>By @item.Author  /  @item.PublishDate.ToString("MMMM dd, yyyy")</p>
+                                </div>
                             </div>
-                            <div class="single-post-content">
-                                <h4><a href="blog-details.html">English Language Course for you</a></h4>
-                                <p>By Alex  /  June 20, 2017</p>
-                            </div>
-                        </div>
-                        <div class="single-post mb-30">
-                            <div class="single-post-img">
-                                <a href="blog-details.html">
-                                    <img src="~/img/post/post2.jpg" alt="post">
-                                    <div class="blog-hover">
-                                        <i class="fa fa-link"></i>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="single-post-content">
-                                <h4><a href="blog-details.html">Advance Web Design and Develop</a></h4>
-                                <p>By Alex  /  June 20, 2017</p>
-                            </div>
-                        </div>
-                        <div class="single-post">
-                            <div class="single-post-img">
-                                <a href="blog-details.html">
-                                    <img src="~/img/post/post3.jpg" alt="post">
-                                    <div class="blog-hover">
-                                        <i class="fa fa-link"></i>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="single-post-content">
-                                <h4><a href="blog-details.html">English Language Course for you</a></h4>
-                                <p>By Alex  /  June 20, 2017</p>
-                            </div>
-                        </div>
+                        }
                     </div>
-                    @*<div class="single-blog-widget">
-                        <h3>tags</h3>
-                        <div class="single-tag">
-                            <a href="blog-details.html" class="mr-10 mb-10">course</a>
-                            <a href="blog-details.html" class="mr-10 mb-10">education</a>
-                            <a href="blog-details.html" class="mb-10">teachers</a>
-                            <a href="blog-details.html" class="mr-10">learning</a>
-                            <a href="blog-details.html" class="mr-10">university</a>
-                            <a href="blog-details.html">events</a>
-                        </div>
-                    </div>*@
+                        @*<div class="single-blog-widget">
+                                <h3>tags</h3>
+                                <div class="single-tag">
+                                    <a href="blog-details.html" class="mr-10 mb-10">course</a>
+                                    <a href="blog-details.html" class="mr-10 mb-10">education</a>
+                                    <a href="blog-details.html" class="mb-10">teachers</a>
+                                    <a href="blog-details.html" class="mr-10">learning</a>
+                                    <a href="blog-details.html" class="mr-10">university</a>
+                                    <a href="blog-details.html">events</a>
+                                </div>
+                            </div>*@
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Course End -->
+    <!-- Course End -->
