--- a/EduHomeBack/EduHomeBack/Views/Course/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Course/Index.cshtml
@@ -15,35 +15,35 @@
                 </div>
                 <div class="course-form">
                     <form id="search" action="#">
-                        <input type="search" placeholder="Search..." name="search" />
-                        <button type="submit">search</button>
+                        <input type="search" placeholder="Search..." name="search"/>
+                        <button asp-action="Search" type="submit">search</button>
                     </form>
                 </div>
             </div>
         </div>
         <div class="row">
-            @foreach(var item in courseList)
+            @foreach (var item in courseList)
             {
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="single-course mb-70">
-                    <div class="course-img">
-                        <a asp-action="Detail" asp-route-id="@item.Id">
-                            <img src="~/img/course/@item.Image" alt="course">
-                            <div class="course-hover">
-                                <i class="fa fa-link"></i>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="course-content">
-                        <h3><a asp-action="Detail" asp-route-id="@item.Id">@item.Name</a></h3>
-                        <p>@item.Description</p>
-                        <a asp-action="Detail" asp-route-id="@item.Id" class="default-btn">read more</a>
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="single-course mb-70">
+                        <div class="course-img">
+                            <a asp-controller="Course" asp-action="Detail" asp-route-id="@item.Id">
+                                <img src="~/img/course/@item.Image" alt="course">
+                                <div class="course-hover">
+                                    <i class="fa fa-link"></i>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="course-content">
+                            <h3><a asp-controller="Course" asp-action="Detail" asp-route-id="@item.Id">@item.Name</a></h3>
+                            <p>@item.Description</p>
+                            <a asp-controller="Course" asp-action="Detail" asp-route-id="@item.Id" class="default-btn">read more</a>
+                        </div>
                     </div>
                 </div>
-            </div>
             }
         </div>
-        <div class="row">
+        @*<div class="row">
             <ul class="pagination pagination-lg">
                 @for (int i = 1; i <= ViewBag.PageCount; i++)
                 {
@@ -63,7 +63,7 @@
                 }
 
             </ul>
-        </div>
+        </div>*@
     </div>
 </div>
 <!-- Course End -->
