--- a/EduHomeBack/EduHomeBack/Views/Shared/Components/Teacher/Default.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Shared/Components/Teacher/Default.cshtml
@@ -9,10 +9,10 @@
                 <div class="col-md-3 col-sm-4 col-xs-12">
                     <div class="single-teacher">
                         <div class="single-teacher-img">
-                            <a asp-action="Detail"><img src="img/teacher/@item.Image" alt="teacher"></a>
+                            <a asp-controller= "Teacher" asp-action="Detail" asp-route-id="@item.Id"><img src="~/img/teacher/@item.Image" alt="teacher"></a>
                         </div>
                         <div class="single-teacher-content text-center">
-                            <h2><a asp-action="Detail">@item.Fullname</a></h2>
+                            <h2><a asp-controller= "Teacher" asp-action="Detail" asp-route-id="@item.Id">@item.Fullname</a></h2>
 
                             <h4>@item.TeacherPositions?.FirstOrDefault()?.Position.Name</h4>
 
