--- a/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
@@ -66,51 +66,14 @@
                             <div class="main-menu">
                                 <nav>
                                     <ul>
-                                        <li>
-                                            <a asp-controller="Home" asp-action="Index">Home</a>
-                                                @*<ul>
-                                                    <li><a href="index.html">Home One</a></li>
-                                                    <li><a href="index-2.html">Home Two</a></li>
-                                                    <li><a href="index-3.html">Home Three</a></li>
-                                                    <li><a href="index-4.html">Home Four</a></li>
-                                                    <li><a href="index-5.html">Home Five</a></li>
-                                                </ul>*@
-                                        </li>
+                                        <li> <a asp-controller="Home" asp-action="Index">Home</a></li>
                                         <li><a asp-controller="About" asp-action="Index">About</a></li>
-                                        <li>
-                                            <a asp-controller="Course" asp-action="Index">courses</a>
-                                            @*<ul>
-                                                <li><a href="course.html">courses</a></li>
-                                                <li><a href="course-details.html">courses details</a></li>
-                                            </ul>*@
-                                        </li>
-                                        <li>
-                                            <a asp-controller="Event" asp-action="Index" >event</a>
-                                            @*<ul>
-                                                <li><a href="event.html">event</a></li>
-                                                <li><a href="event-left-side-bar.html">event left sidebar</a></li>
-                                                <li><a href="event-right-side-bar.html">event right sidebar</a></li>
-                                                <li><a href="event-details.html">event details</a></li>
-                                            </ul>*@
-                                        </li>
-                                        <li class="hidden-sm">
-                                            <a asp-controller="Teacher" asp-action="Index">teacher</a>
-                                            @*<ul>
-                                                <li><a href="teacher.html">teacher</a></li>
-                                                <li><a href="teacher-details.html">teacher details</a></li>
-                                            </ul>*@
-                                        </li>
-                                        <li>
-                                            <a asp-controller="Blog" asp-action="Index">blog</a>
-                                            @*<ul>
-                                                <li><a href="blog.html">blog</a></li>
-                                                <li><a href="blog-left-side-bar.html">blog left sidebar</a></li>
-                                                <li><a href="blog-right-side-bar.html">blog righ sidebar</a></li>
-                                                <li><a href="blog-details.html">blog details</a></li>
-                                            </ul>*@
-                                        </li>
-                                        <li><a href="contact.html">Contact</a></li>
-                                        <li><a href="#">Buy Now</a>
+                                        <li> <a asp-controller="Course" asp-action="Index">courses</a> </li>
+                                        <li><a asp-controller="Event" asp-action="Index">event</a></li>
+                                        <li class="hidden-sm"><a asp-controller="Teacher" asp-action="Index">teacher</a></li>
+                                        <li><a asp-controller="Blog" asp-action="Index">blog</a></li>
+                                        <li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
+                                        <li><a href="#">Buy Now</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -123,14 +86,16 @@
                                 </ul>
                                 <div class="search">
                                     <div class="search-form">
-                                        <form id="search-form" action="#">
-                                            <input type="search" placeholder="Search here..." name="search" />
-                                            <button type="submit">
-                                                <span><i class="fa fa-search"></i></span>
-                                            </button>
+                                        <form id="search-form" method="get">
+                                            <input type="text" placeholder="Search here..." name="search" id="search-home-input" />
+                                            <button type="submit" asp-controller="Home" asp-action="Search"><span><i class="fa fa-search"></i></span></button>
                                         </form>
                                     </div>
+                                    <div class="row" id="home-search">
+
+                                    </div>
                                 </div>
+
                             </div>
                             <!--End of Search Form-->
                             <!-- Main Menu End -->
