--- a/EduHomeBack/EduHomeBack/Views/Teacher/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Teacher/Index.cshtml
@@ -14,12 +14,12 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="course-title">
-                    <h3>search courses</h3>
+                    <h3>search teachers</h3>
                 </div>
                 <div class="course-form">
                     <form id="search" action="#">
                         <input type="search" placeholder="Search..." name="search" />
-                        <button type="submit">search</button>
+                        <button asp-action="Search" type="submit">search</button>
                     </form>
                 </div>
             </div>
