--- a/EduHomeBack/EduHomeBack/Views/Event/Detail.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Event/Detail.cshtml
@@ -84,12 +84,10 @@
                     <div class="single-blog-widget mb-50">
                         <h3>categories</h3>
                         <ul>
-                            <li><a href="#">CSS Engineering (10)</a></li>
-                            <li><a href="#">Political Science (12)</a></li>
-                            <li><a href="#">Micro Biology (08)</a></li>
-                            <li><a href="#">HTML5 &amp; CSS3 (15)</a></li>
-                            <li><a href="#">Web Design (20)</a></li>
-                            <li><a href="#">PHP (23)</a></li>
+                            @foreach (var category in Model.Categories)
+                            {
+                                <li><a asp-action="Index" asp-route-categoryId="@category.Id">@category.Name (@category.EventLists.Count)</a></li>
+                            }
                         </ul>
                     </div>
                     <div class="single-blog-widget mb-50">
