--- a/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
@@ -44,8 +44,18 @@
                     <div class="col-md-4 col-sm-4 col-xs-12">
                         <div class="header-top-right text-right">
                             <ul>
-                                <li><a href="login.html">login</a></li>
-                                <li><a href="signup.html">signup</a></li>
+                                <li>
+                                    @if (User.Identity.IsAuthenticated)
+                                    {
+                                        <a asp-controller="Account" asp-action="Logout">logout - @User.Identity.Name</a>
+                                    }
+                                    else
+                                    {
+                                        <a asp-controller="Account" asp-action="Login">login</a>
+                                    }
+                                </li>
+
+                                <li><a asp-controller="Account" asp-action="Register">signup</a></li>
                             </ul>
                         </div>
                     </div>
@@ -111,7 +121,6 @@
     <!-- Header Area End -->
 
     @RenderBody()
-
 
 <div class="subscribe-area pt-60 pb-70">
     <div class="container">
