--- a/EduHomeBack/EduHomeBack/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
@@ -24,7 +24,7 @@
         <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
             <div class="navbar-brand-wrapper d-flex justify-content-center">
                 <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">
-                    <a class="navbar-brand brand-logo" href="index.html"><img src="~/admin/images/eduhome-logo.png" alt="logo" style="height: 25px"/></a>
+                    <a class="navbar-brand brand-logo" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/admin/images/eduhome-logo.png" alt="logo" style="height: 25px" /></a>
                     <a class="navbar-brand brand-logo-mini" href="index.html"><img src="~/admin/images/logo-mini.svg" alt="logo" /></a>
                     <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
                         <span class="mdi mdi-sort-variant"></span>
@@ -177,13 +177,13 @@
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
                             <i class="mdi mdi-circle-outline menu-icon"></i>
-                            <span class="menu-title">UI Elements</span>
+                            <span class="menu-title">Courses</span>
                             <i class="menu-arrow"></i>
                         </a>
                         <div class="collapse" id="ui-basic">
                             <ul class="nav flex-column sub-menu">
-                                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Buttons</a></li>
-                                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Typography</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-controller="Course" asp-action="Index">Course List</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-controller="Course" asp-action="Create">Add New Course</a></li>
                             </ul>
                         </div>
                     </li>
@@ -275,6 +275,7 @@
     <script src="~/admin/js/dataTables.bootstrap4.js"></script>
     <!-- End custom js for this page-->
     <script src="~/admin/js/jquery.cookie.js" type="text/javascript"></script>
+    @RenderSection("Scripts", false)
 </body>
 
 </html>
