--- a/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
@@ -56,6 +56,7 @@
                                 </li>
 
                                 <li><a asp-controller="Account" asp-action="Register">signup</a></li>
+                                <li><a asp-area="AdminPanel" asp-controller="Dashboard" asp-action="Index">Admin</a></li>
                             </ul>
                         </div>
                     </div>
