--- a/EduHomeBack/EduHomeBack/Views/_ViewImports.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using EduHomeBack.Models
 @using EduHomeBack.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, AuthoringTagHelpers
