--- a/EduHomeBack/EduHomeBack/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
@@ -169,18 +169,18 @@
             <nav class="sidebar sidebar-offcanvas" id="sidebar">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">
+                        <a class="nav-link" asp-controller="Dashboard" asp-action="Index">
                             <i class="mdi mdi-home menu-icon"></i>
                             <span class="menu-title">Dashboard</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
+                        <a class="nav-link" data-toggle="collapse" href="#course" aria-expanded="false" aria-controls="course">
                             <i class="mdi mdi-circle-outline menu-icon"></i>
                             <span class="menu-title">Courses</span>
                             <i class="menu-arrow"></i>
                         </a>
-                        <div class="collapse" id="ui-basic">
+                        <div class="collapse" id="course">
                             <ul class="nav flex-column sub-menu">
                                 <li class="nav-item"> <a class="nav-link" asp-controller="Course" asp-action="Index">Course List</a></li>
                                 <li class="nav-item"> <a class="nav-link" asp-controller="Course" asp-action="Create">Add New Course</a></li>
@@ -188,49 +188,48 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/forms/basic_elements.html">
-                            <i class="mdi mdi-view-headline menu-icon"></i>
-                            <span class="menu-title">Form elements</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/charts/chartjs.html">
-                            <i class="mdi mdi-chart-pie menu-icon"></i>
-                            <span class="menu-title">Charts</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/tables/basic-table.html">
-                            <i class="mdi mdi-grid-large menu-icon"></i>
-                            <span class="menu-title">Tables</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/icons/mdi.html">
-                            <i class="mdi mdi-emoticon menu-icon"></i>
-                            <span class="menu-title">Icons</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
-                            <i class="mdi mdi-account menu-icon"></i>
-                            <span class="menu-title">User Pages</span>
+                        <a class="nav-link" data-toggle="collapse" href="#teacher" aria-expanded="false" aria-controls="teacher">
+                            <i class="mdi mdi-circle-outline menu-icon"></i>
+                            <span class="menu-title">Teachers</span>
                             <i class="menu-arrow"></i>
                         </a>
-                        <div class="collapse" id="auth">
+                        <div class="collapse" id="teacher">
                             <ul class="nav flex-column sub-menu">
-                                <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
-                                <li class="nav-item"> <a class="nav-link" href="pages/samples/login-2.html"> Login 2 </a></li>
-                                <li class="nav-item"> <a class="nav-link" href="pages/samples/register.html"> Register </a></li>
-                                <li class="nav-item"> <a class="nav-link" href="pages/samples/register-2.html"> Register 2 </a></li>
-                                <li class="nav-item"> <a class="nav-link" href="pages/samples/lock-screen.html"> Lockscreen </a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-controller="Teacher" asp-action="Index">Teacher List</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-controller="Teacher" asp-action="Create">Add New Teacher</a></li>
                             </ul>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="documentation/documentation.html">
-                            <i class="mdi mdi-file-document-box-outline menu-icon"></i>
-                            <span class="menu-title">Documentation</span>
+                        <a class="nav-link" data-toggle="collapse" href="#blog" aria-expanded="false" aria-controls="blog">
+                            <i class="mdi mdi-circle-outline menu-icon"></i>
+                            <span class="menu-title">Blogs</span>
+                            <i class="menu-arrow"></i>
+                        </a>
+                        <div class="collapse" id="blog">
+                            <ul class="nav flex-column sub-menu">
+                                <li class="nav-item"> <a class="nav-link" asp-controller="Blog" asp-action="Index">Blog List</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-controller="Blog" asp-action="Create">Add New Blog</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="collapse" href="#event" aria-expanded="false" aria-controls="event">
+                            <i class="mdi mdi-circle-outline menu-icon"></i>
+                            <span class="menu-title">Events</span>
+                            <i class="menu-arrow"></i>
+                        </a>
+                        <div class="collapse" id="event">
+                            <ul class="nav flex-column sub-menu">
+                                <li class="nav-item"> <a class="nav-link" asp-controller="Event" asp-action="Index">Event List</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-controller="Event" asp-action="Create">Add New Event</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="nav-item" asp-controller="User" asp-action="Index">
+                        <a class="nav-link" >
+                            <i class="mdi mdi-account menu-icon"></i>
+                            <span class="menu-title">Users</span>
                         </a>
                     </li>
                 </ul>
